Testing website navigation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <a href="#experience" class="text-gray-600 hover:text-indigo-600 transition-colors">Experience</a>
                     <a href="#projects" class="text-gray-600 hover:text-indigo-600 transition-colors">Projects</a>
                     <a href="#contact" class="text-gray-600 hover:text-indigo-600 transition-colors">Contact</a>
+                    <a href="resume.html" class="text-gray-600 hover:text-indigo-600 transition-colors">Resume</a>
                 </div>
                 <button id="mobile-menu-btn" class="md:hidden">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -57,6 +58,9 @@
                 </a>
                 <a href="#projects" class="border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-indigo-600 transition-colors">
                     View Work
+                </a>
+                <a href="resume.html" class="border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-indigo-600 transition-colors">
+                    View Resume
                 </a>
             </div>
         </div>
